--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "sync"
 reqwest = { version = "0.11.1", features = ["json"] }
 bytes = "1"
 futures = "0.3"
+regex = "1.5"
 
 ckb-jsonrpc-types = "0.100.0-rc2"
 ckb-types = "0.100.0-rc2"
